@@ -16,8 +16,7 @@ sub getsetup () { #{{{
 			type => "pagespec",
 			example => "*/discussion",
 			description => "PageSpec to limit which pages anonymous users can edit",
-			description_html => htmllink("", "", "ikiwiki/PageSpec", noimageinline => 1).
-				" to limit which pages anonymous users can edit",
+			link => "ikiwiki/PageSpec",
 			safe => 1,
 			rebuild => 0,
 		},
