@@ -25,11 +25,7 @@ sub getsetup () { #{{{
 			type => "pagespec",
 			example => "mimetype(image/*) and maxsize(50kb)",
 			description => "enhanced PageSpec specifying what attachments are allowed",
-			description_html => htmllink("", "", 
-				"ikiwiki/PageSpec/attachment", 
-				noimageinline => 1,
-				linktext => "enhanced PageSpec",
-				)." specifying what attachments are allowed",
+			link => "ikiwiki/PageSpec/attachment",
 			safe => 1,
 			rebuild => 0,
 		},
