@@ -12,6 +12,7 @@ ikiwiki (2.60) UNRELEASED; urgency=low
   * ikiwiki-update-wikilist: Add -r switch to remove. Default behavior is now
     always to add.
   * Start moving admin preferences from the web interface to the setup file.
+  * websetup: New plugin providing a setup form on the web.
   * ikiwiki-makerepo: Bail if both srcdir and repository are not specified.
     Closes: #493628
 
